Keying set failed to set keyframes #82309

Closed
opened 2020-11-01 19:39:13 +01:00 by Suvidh khasgiwala · 21 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1050ti

Blender Version
Broken: 2.9

Short description of error
Fails to insert the desired keyframe and give the aforementioned error.
Exact steps for others to reproduce the error
I pressed tab on the NarutoCrying track in Naruto Root and moved the location of bones around 13+03 and insert the keyframe. I am presented with that error.
As far as I have tested other actions should work fine.naruto__error_dev.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 1050ti **Blender Version** Broken: 2.9 **Short description of error** Fails to insert the desired keyframe and give the aforementioned error. **Exact steps for others to reproduce the error** I pressed tab on the NarutoCrying track in Naruto Root and moved the location of bones around 13+03 and insert the keyframe. I am presented with that error. As far as I have tested other actions should work fine.[naruto__error_dev.blend](https://archive.blender.org/developer/F9155201/naruto__error_dev.blend)

Added subscriber: @Lovely_Bigga

Added subscriber: @Lovely_Bigga
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the behavior.

First note: blender complains specifically with

Could not insert keyframe due to zero NLA influence or base value

This might even be correct, will need some more investigation.

Can confirm the behavior. First note: blender complains specifically with > Could not insert keyframe due to zero NLA influence or base value This might even be correct, will need some more investigation.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Broken: 2.9

There is no 2.9, only 2.09 and 2.90. I'll assume this is about Blender 2.90.

Please test this with a few older versions of Blender. Knowing whether a bug was recently introduced or has been in Blender for longer will help developers in finding the root cause of the issue.

The example file is quite complex and even has multiple windows open. This is not a minimal example file that's suitable for a quick investigation by developers.

> Broken: 2.9 There is no 2.9, only 2.09 and 2.90. I'll assume this is about Blender 2.90. Please test this with a few [older versions of Blender](https://download.blender.org/release/). Knowing whether a bug was recently introduced or has been in Blender for longer will help developers in finding the root cause of the issue. The example file is quite complex and even has multiple windows open. This is not a minimal example file that's suitable for a quick investigation by developers.

Yes, blender 2.90, I will give a new report tomorrow with minimal .blend file

Yes, blender 2.90, I will give a new report tomorrow with minimal .blend file

Okay, so I tested different things and tried to resolve the bug/ error. I think the main problem may not be the error, since the error was valid in one sense although I feel it should have stated the problem directly.
I think the error is reproducible and not specific to my PC.

Here is the minimal blend file:
naruto__error_dev.blend

@lichtwerk correctly described the issue although maybe in more technical language.
The error arises because in NLA strip the keyframe range of the Action is between a certain range x to y(y being greater than x) when we try to add a keyframe at frame z such that zy, one gets the error message.
Keying set failed to insert keyframes, Now, a longtime user might be able to recognise this error and take action accordingly but for someone just learning blender, he may be lost and confused.
Whether blender should allow insertion of keyframes outside the region NLA of NLA track is up for debate and maybe more experienced blender animators can answer it more rigorously,
But my take is that it should allow insertion of keyframes since the NLA editor is a method for mild editing of action for use in the overall structure of bringing together all the actions and using them to produce a unified animation and as such actions are/should be independent of the NLA strip.
So the panel Strip->Action Clip-> Frame start and end
image.png

  • as the blender doc(https://docs.blender.org/manual/en/latest/editors/nla/properties_modifiers.html#strip) suggests -are to specify how much of the strip is to be used in the NLA editor.
    It seems to me that this is definitely a bug since blender in edit/tweak mode we are editing the action as we see fit and later we can choose how many frames we want to use via the Frame start and end of action Clip. There could be some anti-thesis that I am unaware of.

Tested in
Blender 2.83 LTS: Error Found
Blender 2.90: Error found
Blender 2.90.1: Error Found
Thanks for your time.

Okay, so I tested different things and tried to resolve the bug/ error. I think the main problem may not be the error, since the error was valid in one sense although I feel it should have stated the problem directly. I think the error is reproducible and not specific to my PC. Here is the minimal blend file: [naruto__error_dev.blend](https://archive.blender.org/developer/F9216873/naruto__error_dev.blend) @lichtwerk correctly described the issue although maybe in more technical language. The error arises because in NLA strip the keyframe range of the Action is between a certain range x to y(y being greater than x) when we try to add a keyframe at frame z such that z<x or z>y, one gets the error message. Keying set failed to insert keyframes, Now, a longtime user might be able to recognise this error and take action accordingly but for someone just learning blender, he may be lost and confused. Whether blender should allow insertion of keyframes outside the region NLA of NLA track is up for debate and maybe more experienced blender animators can answer it more rigorously, But my take is that it should allow insertion of keyframes since the NLA editor is a method for mild editing of action for use in the overall structure of bringing together all the actions and using them to produce a unified animation and as such actions are/should be independent of the NLA strip. So the panel Strip->Action Clip-> Frame start and end ![image.png](https://archive.blender.org/developer/F9216987/image.png) - as the blender doc(https://docs.blender.org/manual/en/latest/editors/nla/properties_modifiers.html#strip) suggests -are to specify how much of the strip is to be used in the NLA editor. It seems to me that this is definitely a bug since blender in edit/tweak mode we are editing the action as we see fit and later we can choose how many frames we want to use via the Frame start and end of action Clip. There could be some anti-thesis that I am unaware of. Tested in Blender 2.83 LTS: Error Found Blender 2.90: Error found Blender 2.90.1: Error Found Thanks for your time.
Member

when we try to add a keyframe at frame z such that zy, one gets the error message.

This should not be the case since "The NLA system now evaluates the strip based on the action bounds if it's flagged for syncing"
https://wiki.blender.org/wiki/Reference/Release_Notes/2.91/Animation-Rigging
89ee260ef2

In your case, this is already working fine for the Sea_laying_02 Sea_laying_01.001 strips, but "fails" for NarutoCrying, NarutoShocked, finger movement, NarutoSadLaying:
Turns out the reason for this is that the "failing" strips dont have Sync Length turned ON:

image.png

If I turn this ON, then I can key outside the strip bounds, can you confirm this works for you?

@dr.sybren: Is there a reason why this is not always ON (cannot think of one atm. tbh)

> when we try to add a keyframe at frame z such that z<x or z>y, one gets the error message. This should not be the case since "The NLA system now evaluates the strip based on the action bounds if it's flagged for syncing" https://wiki.blender.org/wiki/Reference/Release_Notes/2.91/Animation-Rigging 89ee260ef2 In your case, this is already working fine for the `Sea_laying_02` `Sea_laying_01.001` strips, but "fails" for `NarutoCrying`, `NarutoShocked`, `finger movement`, `NarutoSadLaying`: Turns out the reason for this is that the "failing" strips dont have `Sync Length` turned ON: ![image.png](https://archive.blender.org/developer/F9217337/image.png) If I turn this ON, then I can key outside the strip bounds, can you confirm this works for you? @dr.sybren: Is there a reason why this is not **always** ON (cannot think of one atm. tbh)

But even with sync on if I tab to enter in tweak mode of action strip, and try to enter a keyframe out of bounds in NaurtoCrying animation I still cannot enter a keyframe at 314th (for example)frame.
naruto__error_dev.blend

While in tweak action mode there is no option to SYNC NOW.
image.png

image.png

Steps to reproduce:
Select the NLA strip(NArutoCrying)-> Press TAB-> try to enter keyframe out of bounds of the NLA strip even after selecting Sync length. the error is reproduced.

But even with sync on if I tab to enter in tweak mode of action strip, and try to enter a keyframe out of bounds in `NaurtoCrying` animation I still cannot enter a keyframe at 314th (for example)frame. [naruto__error_dev.blend](https://archive.blender.org/developer/F9219465/naruto__error_dev.blend) While in tweak action mode there is no option to SYNC NOW. ![image.png](https://archive.blender.org/developer/F9219482/image.png) ![image.png](https://archive.blender.org/developer/F9219488/image.png) Steps to reproduce: Select the NLA strip(NArutoCrying)-> Press TAB-> try to enter keyframe out of bounds of the NLA strip even after selecting Sync length. the error is reproduced.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @wbmoss_dev

Added subscriber: @wbmoss_dev
Member

The sync-keyframing behavior was introduced in 2.91, not 2.90.1.

The sync-keyframing behavior was introduced in 2.91, not 2.90.1.

In #82309#1049480, @Lovely_Bigga wrote:
Steps to reproduce:
Select the NLA strip(NArutoCrying)-> Press TAB-> try to enter keyframe out of bounds of the NLA strip even after selecting Sync length. the error is reproduced.

I can't reproduce the problem with these steps, using Blender 2.91 beta (ada79b4707). With Sync Length=ON, I can set a keyframe outside the strip bounds just fine.

In #82309#1049209, @lichtwerk wrote:
@dr.sybren: Is there a reason why this is not always ON (cannot think of one atm. tbh)

It is on by default for stashed strips (dbb2b29bea) but not for pushed-down strips. This was apparently chosen by Joshua (9b1ce6e556, search for "(XXX) synchronisation of strip-length"), but not very strongly, as he writes "this decision is still subject to further review".

I think that, with @wbmoss_dev 's recent improvements to how Sync Length works, it's now safe to enable by default. @wbmoss_dev what do you think?

> In #82309#1049480, @Lovely_Bigga wrote: > Steps to reproduce: > Select the NLA strip(NArutoCrying)-> Press TAB-> try to enter keyframe out of bounds of the NLA strip even after selecting Sync length. the error is reproduced. I can't reproduce the problem with these steps, using Blender 2.91 beta (ada79b4707). With Sync Length=ON, I can set a keyframe outside the strip bounds just fine. > In #82309#1049209, @lichtwerk wrote: > @dr.sybren: Is there a reason why this is not **always** ON (cannot think of one atm. tbh) It is on by default for stashed strips (dbb2b29bea) but not for pushed-down strips. This was apparently chosen by Joshua (9b1ce6e556, search for "(XXX) synchronisation of strip-length"), but not very strongly, as he writes "this decision is still subject to further review". I think that, with @wbmoss_dev 's recent improvements to how Sync Length works, it's now safe to enable by default. @wbmoss_dev what do you think?
Member

I think it would be fine to be enabled by default.

I think it would be fine to be enabled by default.

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

@Lovely_Bigga can you give this another test with Blender 2.91, to see if it's still an issue? As I said earlier, I can't reproduce the issue myself.

@Lovely_Bigga can you give this another test with Blender 2.91, to see if it's still an issue? As I said earlier, I can't reproduce the issue myself.

Sorry for the late response.
Yes, with sync length ON I am able to set keyframes in Blender 2.91.
Hurray!

Sorry for the late response. Yes, with sync length ON I am able to set keyframes in Blender 2.91. Hurray!

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-12-03 12:20:19 +01:00

Since the issue has been confirmed in the past, and can't be reproduced any more, I'll mark it as resolved.

Since the issue has been confirmed in the past, and can't be reproduced any more, I'll mark it as resolved.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82309
No description provided.